--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 FLASK_ENV=development
-SQLALCHEMY_DATABASE_URI=postgresql://user:pass@localhost:5432/db
+SQLALCHEMY_DATABASE_URI=postgresql://USER:PASSWORD@localhost:5432/DATABASE
 SECRET_KEY=
